apps/redirect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: relay.testing.mbund.org
    nginx.ingress.kubernetes.io/permanent-redirect: "https://mbund.dev?ref=mbund.org"
spec:
  ingressClassName: public
  rules:
    - host: &host testing.mbund.org
  tls:
    - secretName: apex-tls-certificate
      hosts:
        - *host
